add 11-lesson of the way-s(grid, value)

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,28 @@
-ul li {
-    list-style-type: circle;
+.app-wrapper {
+    width: 100%;
+    margin: 0 auto;
+display: grid;
+    grid-template-areas:
+    "header header header"
+    "nav main main";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 10px;
 }
+.header {
+grid-area: header;
+    background-color: aqua;
+}
+.header img {
+    width: 40px;
+    height: 40px;
+}
+.nav {
+    grid-area: nav;
+    background-color: chartreuse;
+}
+.main {
+    grid-area: main;
+    background-color: coral;
 
+}
