--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,10 @@
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
 }
-
+.appWrapperContent {
+    grid-area: main;
+    background-color: coral;
+}
 
 
 
