--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,14 @@
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
+
 }
 .appWrapperContent {
     grid-area: main;
     background-color: coral;
 }
 
-
+button {
+    cursor: pointer;
+}
 
