change: add style App.module.css, Header.module.css and Navbar.module.css

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
 }
 .appWrapperContent {
     grid-area: main;
-    background-color: coral;
+    background-color: #002635;
+    color: white;
 }
 
 button {
