change: add style App.module.css, Header.module.css and Navbar.module.css

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,17 @@
     "nav main main";
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
-    grid-gap: 10px;
+    /*grid-gap: 10px;*/
+    column-gap: 10px;
+    background-color: #ff9801;
+    color: white;
 }
 
 .appWrapperComponents {
     grid-area: main;
-    background-color: coral;
+    background-color: #002635;
+    color: white;
+
 }
 
 
