--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,15 @@
 .nav {
   grid-area: nav;
-  background-color: chartreuse;
-}
-
-.item{
+  background-color:#002635;
+  padding: 20px;
   color: #ffffff
 }
-.active {
-  color: #d000ff;
+
+.item a{
+  color: #ffffff;
+  text-decoration: none;
+}
+.item a.active {
+  color: gold;
   font-weight: bold;
 }
