--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -20,8 +20,14 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-   align-items: flex-end;
 }
 
+.left{
+    display: flex;
+}
+.right{
+    display: flex;
+    justify-content: flex-end;
+}
 
 
