--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,3 +13,10 @@
   color: gold;
   font-weight: bold;
 }
+
+/*.friend img{*/
+/*  width: 30px;*/
+/*  height: 30px;*/
+/*  border-radius: 50%;*/
+/*  object-fit: cover;*/
+/*}*/
