create: add Friends.tsx and FriendItem.tsx (29 lesson)

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,18 +11,16 @@
 
 }
 
-.dialogsItems .active {
-    color: gold
-}
-.dialog a{
-    color: white;
-}
 
 .messages {
     padding: 10px;
 
 }
 
-.message {
-
+.left {
+display: flex;
+}
+.right {
+    display: flex;
+    justify-content: flex-end;
 }
